# ytbatch

./: .gitignore  LICENSE  README.md  pyproject.toml  run_cli.py  run_gui.py
packaging/: ytbatch-cli.spec  ytbatch-gui.spec
ytbatch/: cli.py  core.py  ffmpeg.py  models.py  resources.py  storage.py
ytbatch/gui/: app.py  worker.py
